--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
     "chalk": "^5.4.1",
     "colors": "^1.4.0",
     "dotenv": "^17.0.1",
