--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "chalk": "^5.4.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "colors": "^1.4.0",
     "dotenv": "^17.0.1",
     "mongoose": "^8.16.1",
