--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^11.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
@@ -29,11 +30,13 @@
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "bull": "^4.16.5",
     "chalk": "^5.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "colors": "^1.4.0",
     "dotenv": "^17.0.1",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.16.1",
     "passport": "^0.7.0",
     "passport-oauth2": "^1.8.0",
